Add "Detect JVMs" Button to Preferences